--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
 
     <div class="nav">
-
         <h1 class="nav-title">Profile</h1>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">My Profile</a></li>
             <li><a href="#">Find Connections</a></li>
         </ul>
-        <h1><button class="btn">Sign Out</h1>
+        <div class="button">
+            <h4 class="button-title">Sign Out</h4>
+        </div>
     </div>
-
     <div class="main">
         <div class="container">
             <div class="user-card">
@@ -59,8 +59,8 @@
             <div class="connection-requests">
                 <div class="connection-requests-header">
                     <img src="2.png" alt="2" class="requests">
-                <h2>Connection Requests</h2>
-            </div>
+                    <h2>Connection Requests</h2>
+                </div>
                 <div class="connection-requests-body">
                     <div class="row">
                         <img src="user-circle.png" alt="user-circle" class="pic">
